# pymono

./: pyproject.toml
docs/source/: conf.py  index.rst
pymono/: game.py  process.py  scriptlet.py  scriptlets.py
tests/: game.py  process.py  scriptlet.py
